--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -1,3 +1,11 @@
-* @code-asher @nhooyr
+Almost done, @errri! To complete your GitHub sign up, we just need to verify your email address: marshal.wiz1@gmail.com. 
 
-ci/helm-chart @Matthew-Beckett @alexgorbatchev
+https://github.com/users/errri/emails/132354954/confirm_verification/30b03139e35b66d03a60847238e02d33e2815780?utm_campaign=github-email-verification&utm_content=html&utm_medium=email&utm_source=verification-email
+ Once verified, you can start using all of GitHub's features to explore, build, and share projects. 
+Button not working? Paste the following link into your browser: https://github.com/users/errri/emails/132354954/confirm_verification/30b03139e35b66d03a60847238e02d33e2815780?utm_campaign=github-email-verification&utm_content=html&utm_medium=email&utm_source=verification-email
+You’re receiving this email because you recently created a new GitHub account or added a new email address. If this wasn’t you, please ignore this email.
+https://github.com/settings/emails · https://docs.github.com/articles/github-terms-of-service/ · https://docs.github.com/articles/github-privacy-policy/ · https://github.com/login
+
+ Sent with <3 by GitHub.
+ GitHub, Inc. 88 Colin P Kelly Jr Street
+San Francisco, CA 94107
